# matrx-engine

./: .env.example  .gitignore  AGENT_ENGINE_SPEC.md  Dockerfile  Makefile  README.md  docker-compose.yml  litellm_config.yaml  pyproject.toml
.arman/: overview.md
.claude/: settings.json
.claude/agents/: README.md  research-specialist.md
.claude/skills/: README.md
engine/: __init__.py  config.py  main.py
engine/agent/: __init__.py  executor.py  hooks.py  permissions.py  session.py
engine/api/: __init__.py  router.py
engine/api/middleware/: __init__.py  auth.py
engine/api/routes/: agent.py  health.py  tools.py
engine/api/schemas/: __init__.py  requests.py  responses.py
engine/litellm/: __init__.py  client.py  proxy.py
engine/mcp/: __init__.py  config.json  manager.py
engine/mcp/servers/: README.md  __init__.py
engine/recipes/: README.md  __init__.py  interfaces.py  resolver.py
engine/streaming/: __init__.py  emitter.py  events.py
engine/tools/: README.md  __init__.py  database_tool.py  http_tool.py  recipe_tool.py  registry.py
engine/utils/: __init__.py  errors.py  logging.py
tests/: conftest.py  test_agent_executor.py  test_recipe_resolver.py  test_streaming.py  test_tools.py
